--- a/DocDB/.gitignore
+++ b/DocDB/.gitignore
@@ -2,6 +2,7 @@ logs
 project/project
 project/target
 target
+.target
 tmp
 .history
 dist
@@ -14,3 +15,6 @@ dist
 /RUNNING_PID
 /.settings
 /bin/
+/data
+/*.log
+/files
